Fixed search text on dark mode

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ h1, h2, h3, h4, h5 {
   padding: 10px 0px;
   text-align: center;
   background-color: var(--secondary);
+  color: var(--text);
 }
 
 .board-container {
